--- a/template/thermostat.xml
+++ b/template/thermostat.xml
@@ -17,7 +17,7 @@
       <st id="GV7" editor="I_ENABLED" />
       <st id="GV8" editor="BOOL" />
       <st id="GV9" editor="I_ENABLED" />
-      <st id="GV17" editor="I_ENABLED" />
+      <st id="GV17" editor="I_ECO" />
     </sts>
     <cmds>
       <accepts>
@@ -66,7 +66,7 @@
           <p id="" editor="I_BACKLIGHT" init="GV11" />
         </cmd>
         <cmd id="GV17">
-          <p id="" editor="I_ENABLED" init="GV17" />
+          <p id="" editor="I_ECO" init="GV17" />
         </cmd>
         <cmd id="QUERY" />
      </accepts>
@@ -92,7 +92,7 @@
       <st id="GV7" editor="I_ENABLED" />
       <st id="GV8" editor="BOOL" />
       <st id="GV9" editor="I_ENABLED" />
-      <st id="GV17" editor="I_ENABLED" />
+      <st id="GV17" editor="I_ECO" />
     </sts>
     <cmds>
       <accepts>
@@ -147,7 +147,7 @@
           <p id="" editor="I_BACKLIGHT" init="GV11" />
         </cmd>
         <cmd id="GV17">
-          <p id="" editor="I_ENABLED" init="GV17" />
+          <p id="" editor="I_ECO" init="GV17" />
         </cmd>
         <cmd id="QUERY" />
       </accepts>
@@ -179,7 +179,7 @@
       <st id="GV14" editor="I_RATING" />
       <st id="GV15" editor="I_RATING" />
       <st id="GV16" editor="I_RATING" />
-      <st id="GV17" editor="I_ENABLED" />
+      <st id="GV17" editor="I_ECO" />
     </sts>
     <cmds>
       <accepts>
@@ -228,7 +228,7 @@
           <p id="" editor="I_BACKLIGHT" init="GV11" />
         </cmd>
         <cmd id="GV17">
-          <p id="" editor="I_ENABLED" init="GV17" />
+          <p id="" editor="I_ECO" init="GV17" />
         </cmd>
         <cmd id="QUERY" />
      </accepts>
@@ -261,7 +261,7 @@
       <st id="GV14" editor="I_RATING" />
       <st id="GV15" editor="I_RATING" />
       <st id="GV16" editor="I_RATING" />
-      <st id="GV17" editor="I_ENABLED" />
+      <st id="GV17" editor="I_ECO" />
     </sts>
     <cmds>
       <accepts>
@@ -316,7 +316,7 @@
           <p id="" editor="I_BACKLIGHT" init="GV11" />
         </cmd>
         <cmd id="GV17">
-          <p id="" editor="I_ENABLED" init="GV17" />
+          <p id="" editor="I_ECO" init="GV17" />
         </cmd>
         <cmd id="QUERY" />
       </accepts>
